--- a/Golang/MyProgram/www/Ver_02/templates/create.html
+++ b/Golang/MyProgram/www/Ver_02/templates/create.html
@@ -2,7 +2,7 @@
 {{ template "header" }}
 <main class="px-3">
     <h1>Форма добавления статьи</h1>
-    <form action="/safe_article" method="post">
+    <form action="/safe_article/" method="POST">
         <input type="text" name="title" id="title" placeholder="Введите название статьи" class="form-control"><br>
         <textarea name="full_text" id="full_text" class="form-control"
             placeholder="Введите текст статьи"></textarea><br>
@@ -10,5 +10,23 @@
     </form>
 
 </main>
+
+
+
+
+
+
+    <!-- <body>
+        <h2>Ввод данных</h2>
+        <form method="POST" action="safe_article">
+            <label>Имя</label><br>
+            <input type="text" name="title" /><br><br>
+            <label>Возраст</label><br>
+            <input type="text" name="full_text" /><br><br>
+            <input type="submit" value="Отправить" />
+        </form>
+    </body> -->
+
+
 {{ template "footer" }}
 {{ end }}
