--- a/Golang/MyProgram/www/Ver_02/templates/create.html
+++ b/Golang/MyProgram/www/Ver_02/templates/create.html
@@ -4,6 +4,8 @@
     <h1>Форма добавления статьи</h1>
     <form action="/safe_article/" method="POST">
         <input type="text" name="title" id="title" placeholder="Введите название статьи" class="form-control"><br>
+        <textarea name="anons" id="anons" class="form-control"
+            placeholder="Введите анонс статьи"></textarea><br>
         <textarea name="full_text" id="full_text" class="form-control"
             placeholder="Введите текст статьи"></textarea><br>
         <button class="btn btn-warning">Добавить</button>
