--- a/Golang/MyProgram/www/Ver_02/templates/header.html
+++ b/Golang/MyProgram/www/Ver_02/templates/header.html
@@ -16,7 +16,7 @@
 
 <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-        <header class="mb-auto">
+        <!-- <header class="mb-auto">
             <div>
                 <h3 class="float-md-start mb-0">Tolmachov</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
@@ -25,5 +25,59 @@
                     <a class="nav-link fw-bold py-1 px-0" href="/contacts/">Contacts</a>
                 </nav>
             </div>
-        </header>
+        </header> -->
+
+        <!-- <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <div class="container-fluid">
+                
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                  aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="/">Home_page</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/create/">Create article</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="/contacts/">Contacts</a>
+                    </li>
+                  </ul>
+                  <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Найти</button>
+                  </form>
+                </div>
+              </div>
+            </nav>
+          </header> -->
+
+          <header class="p-3 mb-3 border-bottom">
+            <div class="container">
+              <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+                <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
+                  <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+                </a>
+        
+                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                  <li><a href="/" class="nav-link px-2 link-secondary">Main</a></li>
+                  <li><a href="/create/" class="nav-link px-2 link-body-emphasis">Create article</a></li>
+                  <li><a href="#" class="nav-link px-2 link-body-emphasis">Customers</a></li>
+                  <li><a href="#" class="nav-link px-2 link-body-emphasis">Products</a></li>
+                </ul>
+        
+                <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search" data-dashlane-rid="d119e69862575c86" data-form-type="">
+                  <input type="search" class="form-control" placeholder="Search..." aria-label="Search" data-dashlane-rid="41ed16bd63e775e6" data-form-type="">
+                </form> -->
+        
+                
+              </div>
+            </div>
+          </header>
+          
         {{ end }}
