--- a/Golang/MyProgram/www/Ver_02/templates/index.html
+++ b/Golang/MyProgram/www/Ver_02/templates/index.html
@@ -1,12 +1,21 @@
 {{ define "index" }}
 {{ template "header" }}
-<main class="px-3">
-    <h1>Главная страница</h1>
+<main role="main" class="inner cover">
+    <h1 class="cover-heading">Главная страница</h1>
     <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolorum adipisci ad odit soluta
         itaque a laudantium! Reprehenderit quod unde aliquid expedita rerum quas exercitationem mollitia ut, eos
         molestiae est?</p>
+
+    {{ range . }}
+    <div class="alert alert-danger">
+        <h2>{{ .Title }}</h2>
+        <p>{{ .Anons }}</p>
+        <a href="/post/{{ .Id }}" class="btn btn-danger">Read more</a>
+    </div>
+    {{ end }}
+
     <p class="lead">
-        <a href="#" class="btn btn-lg btn-light fw-bold border-white bg-white">Кнопка</a>
+        <a href="#" class="btn btn-lg btn-secondary">Кнопка</a>
     </p>
 </main>
 {{ template "footer" }}
