--- a/Golang/MyProgram/words/template/index.html
+++ b/Golang/MyProgram/words/template/index.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+{{template "header"}}
+<main>
+    <h2>Home page content goes here</h2>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Пример передачи данных</title>
-</head>
-
-<body>
-    <h1>Выбор библиотек</h1>
-</body>
-
-</html>
+</main>
+{{template "footer"}}
