--- a/Golang/MyProgram/words/template/header.html
+++ b/Golang/MyProgram/words/template/header.html
@@ -11,6 +11,7 @@
         <a href="/index">Home</a>
         <a href="/word">Учить слова</a>
         <a href="/wordAdd">Добавить слова</a>
+        <a href="/wordAll">Список слов</a>
     </div>
 
     <div style="padding-left:16px">
