--- a/Golang/MyProgram/words/template/wordOk.html
+++ b/Golang/MyProgram/words/template/wordOk.html
@@ -1,9 +1,9 @@
 {{template "header"}}
 <main>
-    <h2>Home page content goes here</h2>
-    <h3>{{.Rus}}</h3>
-    <h3>{{.Norg}}</h3>
-    <h3>{{.Transcription}}</h3>
+    <h2>Тренировать слова</h2>
+    <h3 class="rus-text">{{.Rus}}</h3>
+    <h3 class="rus-text">{{.Norg}}</h3>
+    <h3 class="rus-text">{{.Transcription}}</h3>
     <form action="/word" method="POST">
 
 
