--- a/Golang/MyProgram/words/template/header.html
+++ b/Golang/MyProgram/words/template/header.html
@@ -8,13 +8,13 @@
 
 <body>
     <div class="topnav">
-        <a href="/index">Home</a>
+        <!-- <a href="/index">Home</a> -->
         <a href="/word">Учить слова</a>
         <a href="/wordAdd">Добавить слова</a>
         <a href="/wordAll">Список слов</a>
     </div>
 
     <div style="padding-left:16px">
-        <h2>Norway</h2>
+        <h2>Words</h2>
     </div>
     {{end}}
