--- a/Golang/MyProgram/words/template/wordNot.html
+++ b/Golang/MyProgram/words/template/wordNot.html
@@ -1,8 +1,10 @@
 {{template "header"}}
 <main>
     <h2>Тренировать слова</h2>
-    <h3>wrong</h3>
-    <h3>{{.Rus}}</h3>
+    <h3>Wrong</h3>
+    <h3 class="rus-text">{{.Rus}}</h3>
+    <h3 class="rus-text">{{.Norg}}</h3>
+    <h3 class="rus-text">{{.Transcription}}</h3>
 
 
     <form action="/wordOtvet" method="POST">
