--- a/Golang/MyProgram/words/template/wordNot.html
+++ b/Golang/MyProgram/words/template/wordNot.html
@@ -1,17 +1,24 @@
 {{template "header"}}
+<style>
+    .form-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .center-text {
+        text-align: center;
+    }
+</style>
 <main>
-    <h2>Тренировать слова</h2>
-    <h3>Wrong</h3>
-    <h3 class="rus-text">{{.Rus}}</h3>
-    <h3 class="rus-text">{{.Norg}}</h3>
-    <h3 class="rus-text">{{.Transcription}}</h3>
-
-
-    <form action="/wordOtvet" method="POST">
+    <h2 class="center-text"></h2>
+    <h1 class="center-text">Wrong</h1>
+    <h3 class="center-text rus-text">{{.Rus}}</h3>
+    <h3 class="center-text rus-text">{{.Norg}}</h3>
+    <h3 class="center-text rus-text">{{.Transcription}}</h3>
+    <form action="/wordOtvet" method="POST" class="form-container">
         <input type="text" name="word" id="word" placeholder="Введите перевод" class="form-control" autofocus><br>
-
         <button class="btn btn-warning">Отправить</button>
     </form>
-
 </main>
 {{template "footer"}}
