--- a/Golang/MyProgram/words/template/wordAdd.html
+++ b/Golang/MyProgram/words/template/wordAdd.html
@@ -12,7 +12,7 @@
         <input type="text" name="Norg" id="Norg" placeholder="Norg" class="form-control" autofocus><br>
         <input type="text" name="Transcription" id="Transcription" placeholder="Transcription" class="form-control"><br>
         <input type="text" name="Rus" id="Rus" placeholder="Rus" class="form-control"><br>
-        <button class="btn btn-warning">Добавить</button>
+        <button class="btn btn-warning">Add</button>
     </form>
 </main>
 {{template "footer"}}
