--- a/Golang/MyProgram/words/template/header.html
+++ b/Golang/MyProgram/words/template/header.html
@@ -9,9 +9,9 @@
 <body>
     <div class="topnav">
         <!-- <a href="/index">Home</a> -->
-        <a href="/word">Учить слова</a>
-        <a href="/wordAdd">Добавить слова</a>
-        <a href="/wordAll">Список слов</a>
+        <a href="/word">Study</a>
+        <a href="/wordAdd">Add word</a>
+        <a href="/wordAll">All words</a>
     </div>
 
     <div style="padding-left:16px">
