--- a/Golang/MyProgram/words/template/wordNot.html
+++ b/Golang/MyProgram/words/template/wordNot.html
@@ -9,16 +9,26 @@
     .center-text {
         text-align: center;
     }
+
+    .error-notification {
+        display: inline-block;
+        padding: 10px;
+        background-color: #f8d7da;
+        color: #000000;
+        border: 1px solid #f5c6cb;
+        border-radius: 4px;
+        margin-bottom: 10px;
+    }
 </style>
 <main>
     <h2 class="center-text"></h2>
-    <h1 class="center-text">Wrong</h1>
+    <h1 class="center-text error-notification">Wrong</h1>
     <h3 class="center-text rus-text">{{.Rus}}</h3>
     <h3 class="center-text rus-text">{{.Norg}}</h3>
     <h3 class="center-text rus-text">{{.Transcription}}</h3>
     <form action="/wordOtvet" method="POST" class="form-container">
         <input type="text" name="word" id="word" placeholder="Введите перевод" class="form-control" autofocus><br>
-        <button class="btn btn-warning">Отправить</button>
+        <button class="btn btn-warning">Send</button>
     </form>
 </main>
 {{template "footer"}}
