--- a/Golang/MyProgram/words/template/wordOk.html
+++ b/Golang/MyProgram/words/template/wordOk.html
@@ -1,13 +1,35 @@
 {{template "header"}}
+<style>
+    .form-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .center-text {
+        text-align: center;
+    }
+
+    .error-notification {
+        display: inline-block;
+        padding: 10px;
+        background-color: #afff97;
+        color: #000000;
+        border: 1px solid #afff97;
+        border-radius: 4px;
+        margin-bottom: 10px;
+    }
+</style>
 <main>
-    <h2></h2>
+    <h2 class="center-text"></h2>
+    <h1 class="center-text error-notification">Right</h1>
     <h3 class="rus-text">{{.Rus}}</h3>
     <h3 class="rus-text">{{.Norg}}</h3>
     <h3 class="rus-text">{{.Transcription}}</h3>
     <form action="/word" method="POST">
 
 
-        <button class="btn btn-warning" autofocus>next</button>
+        <button class="btn btn-warning" autofocus>Next</button>
     </form>
 
 </main>
