--- a/Golang/MyProgram/words/template/wordAdd.html
+++ b/Golang/MyProgram/words/template/wordAdd.html
@@ -9,9 +9,10 @@
 <main>
     <h2></h2>
     <form action="/wordAdd" method="POST" class="form-container">
-        <input type="text" name="Norg" id="Norg" placeholder="Norg" class="form-control" autofocus><br>
-        <input type="text" name="Transcription" id="Transcription" placeholder="Transcription" class="form-control"><br>
+        <input type="text" name="Norg" id="Norg" placeholder="Eng" class="form-control" autofocus><br>
+       
         <input type="text" name="Rus" id="Rus" placeholder="Rus" class="form-control"><br>
+        <input type="text" name="Transcription" id="Transcription" placeholder="Transcription" class="form-control"><br>
         <button class="btn btn-warning">Добавить</button>
     </form>
 </main>
