--- a/Golang/MyProgram/words/template/wordOk.html
+++ b/Golang/MyProgram/words/template/wordOk.html
@@ -1,4 +1,25 @@
 {{template "header"}}
+<style>
+    .form-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .center-text {
+        text-align: center;
+    }
+
+    .error-notification {
+        display: inline-block;
+        padding: 10px;
+        background-color: #61f566;
+        color: #000000;
+        border: 1px solid #61f566;
+        border-radius: 4px;
+        margin-bottom: 10px;
+    }
+</style>
 <main>
     <h2 class="center-text"></h2>
     <h1 class="center-text error-notification">Right</h1>
