--- a/Golang/MyProgram/words/template/word.html
+++ b/Golang/MyProgram/words/template/word.html
@@ -12,7 +12,7 @@
 </style>
 <main>
     <h2 class="center-text"></h2>
-    <h3 class="center-text rus-text">{{.Rus}}</h3>
+    <h3 class="center-text rus-text">{{.Russian}}</h3>
     <form action="/wordOtvet" method="POST" class="form-container">
         <input type="text" name="word" id="word" placeholder="Enter translation" class="form-control" autofocus><br>
         <button class="btn btn-warning">Send</button>
