--- a/Golang/MyProgram/words/template/wordNot.html
+++ b/Golang/MyProgram/words/template/wordNot.html
@@ -23,9 +23,9 @@
 <main>
     <h2 class="center-text"></h2>
     <h1 class="center-text error-notification">Wrong</h1>
-    <h3 class="center-text rus-text">{{.Rus}}</h3>
-    <h3 class="center-text rus-text">{{.Norg}}</h3>
-    <h3 class="center-text rus-text">{{.Transcription}}</h3>
+    <h3 class="center-text Russian-text">{{.Russian}}</h3>
+    <h3 class="center-text Russian-text">{{.English}}</h3>
+    <h3 class="center-text Russian-text">{{.Transcription}}</h3>
     <form action="/wordOtvet" method="POST" class="form-container">
         <input type="text" name="word" id="word" placeholder="Введите перевод" class="form-control" autofocus><br>
         <button class="btn btn-warning">Send</button>
