--- a/Golang/MyProgram/words/template/word.html
+++ b/Golang/MyProgram/words/template/word.html
@@ -9,10 +9,20 @@
     .center-text {
         text-align: center;
     }
+    .error-notification {
+        display: inline-block;
+        padding: 10px;
+        background-color: #ffffff;
+        color: #000000;
+        border: 1px solid #4CAF50;
+        border-radius: 4px;
+        margin-bottom: 10px;
+    }
 </style>
 <main>
     <h2 class="center-text"></h2>
-    <h3 class="center-text rus-text">{{.Russian}}</h3>
+   
+    <h3 class="center-text error-notification">{{.Russian}}</h3>
     <form action="/wordOtvet" method="POST" class="form-container">
         <input type="text" name="word" id="word" placeholder="Enter translation" class="form-control" autofocus><br>
         <button class="btn btn-warning">Send</button>
