--- a/Golang/MyProgram/words/template/wordNot.html
+++ b/Golang/MyProgram/words/template/wordNot.html
@@ -24,11 +24,34 @@
     <h2 class="center-text"></h2>
     <h1 class="center-text error-notification">Wrong</h1>
     <h3 class="center-text Russian-text">{{.Russian}}</h3>
-    <h3 class="center-text Russian-text">{{.English}}</h3>
+    <h3 class="Russian-text" id="English-text">{{.English}}</h3>
     <h3 class="center-text Russian-text">{{.Transcription}}</h3>
     <form action="/wordOtvet" method="POST" class="form-container">
         <input type="text" name="word" id="word" placeholder="Введите перевод" class="form-control" autofocus><br>
+        <button id="speak-button" class="btn btn-info">Воспроизвести</button>
         <button class="btn btn-warning">Send</button>
     </form>
 </main>
 {{template "footer"}}
+<script>
+    function speak(text) {
+        const utterance = new SpeechSynthesisUtterance(text);
+        window.speechSynthesis.speak(utterance);
+    }
+
+    window.addEventListener("DOMContentLoaded", () => {
+        const EnglishTextElement = document.getElementById("English-text");
+        const speakButton = document.getElementById("speak-button");
+        if (EnglishTextElement && speakButton) {
+            const EnglishText = EnglishTextElement.textContent;
+
+            // Воспроизвести текст автоматически при загрузке страницы
+            speak(EnglishText);
+
+            // Воспроизвести текст при нажатии на кнопку
+            speakButton.addEventListener("click", () => {
+                speak(EnglishText);
+            });
+        }
+    });
+</script>
