--- a/Golang/MyProgram/words/template/footer.html
+++ b/Golang/MyProgram/words/template/footer.html
@@ -1,7 +1,9 @@
 {{define "footer"}}
-    <footer>
-        <p>&copy; Tolmachov.dev</p>
-    </footer>
+<footer>
+    <a href="https://www.tolmachov.dev" style="color: #fff; text-decoration: none;" target="_blank">&copy;
+        Tolmachov.dev</a>
+</footer>
 </body>
+
 </html>
 {{end}}
