--- a/Golang/MyProgram/words/template/header.html
+++ b/Golang/MyProgram/words/template/header.html
@@ -8,16 +8,10 @@
 
 <body>
     <div class="topnav">
-        <!-- <a href="/index">Home</a> -->
-        <a href="/word">Study</a>
-        <a href="/wordAdd">Add word</a>
-        <a href="/wordAll">All words</a>
-        
-      
-
-    </div>
-
-    <div style="padding-left:16px">
-        <h2>Words</h2>
+        <div class="menu">
+            <a href="/word">Study</a>
+            <a href="/wordAdd">Add word</a>
+            <a href="/wordAll">All words</a>
+        </div>
     </div>
     {{end}}
