--- a/Golang/MyProgram/words/template/word.html
+++ b/Golang/MyProgram/words/template/word.html
@@ -4,11 +4,14 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        font-size: 36px;
+        font-family: Arial, sans-serif;
     }
 
     .center-text {
         text-align: center;
     }
+
     .error-notification {
         display: inline-block;
         padding: 10px;
@@ -17,11 +20,59 @@
         border: 1px solid #4CAF50;
         border-radius: 4px;
         margin-bottom: 10px;
+        font-size: 36px;
+        font-family: Arial, sans-serif;
+    }
+
+    table {
+        margin-left: auto;
+        margin-right: auto;
+        border-collapse: separate;
+        border-spacing: 3px 0;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        color: #333;
+        width: 80%;
+    }
+
+    th,
+    td {
+        padding: 5px;
+        text-align: center;
+    }
+
+    tr:hover {
+        background-color: #f5f5f5;
+    }
+
+    .form-control {
+        display: inline-block;
+        margin-left: auto;
+        margin-right: auto;
+        border-collapse: separate;
+        border-spacing: 3px 0;
+        font-family: Arial, sans-serif;
+        font-size: 36px;
+        color: #000000;
+        
+    }
+
+    .btn {
+        display: inline-block;
+        margin-left: auto;
+        margin-right: auto;
+        border-collapse: separate;
+        border-spacing: 3px 0;
+        font-family: Arial, sans-serif;
+        font-size: 36px;
+        color: #ffffff;
+       
+       
     }
 </style>
 <main>
     <h2 class="center-text"></h2>
-   
+
     <h3 class="center-text error-notification">{{.Russian}}</h3>
     <form action="/wordOtvet" method="POST" class="form-container">
         <input type="text" name="word" id="word" placeholder="Enter translation" class="form-control" autofocus><br>
