--- a/Golang/MyProgram/words/template/wordAdd.html
+++ b/Golang/MyProgram/words/template/wordAdd.html
@@ -9,6 +9,31 @@
     .selected {
         background-color: #57db1a;
     }
+    ul {
+    list-style: none;
+    background-color: #fff;
+    border: 1px solid #b0b0b0;
+    border-radius: 4px;
+    margin: 0;
+    padding: 0;
+    max-height: 400px;
+    overflow-y: auto;
+    position: center;
+    width: 100%;
+    z-index: 1000;
+    align-items: center;
+}
+
+li {
+    padding: 8px;
+    cursor: pointer;
+}
+
+li:hover,
+li.selected {
+    background-color: #f5f5f5;
+}
+
 </style>
 <main>
     <h2></h2>
