--- a/Golang/MyProgram/words/template/wordAll.html
+++ b/Golang/MyProgram/words/template/wordAll.html
@@ -4,17 +4,50 @@
         margin-left: auto;
         margin-right: auto;
         border-collapse: separate;
-        border-spacing: 20px 0;
+        border-spacing: 3px 0;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        color: #333;
+        width: 80%;
     }
 
     th,
     td {
-        padding: 5px;
+        padding: 7px 5px;
         text-align: center;
+        border: 1px solid #ddd;
     }
 
     tr:hover {
         background-color: #f5f5f5;
+    }
+
+    thead {
+        background-color: #f2f2f2;
+        font-weight: bold;
+    }
+
+    tbody tr:nth-child(odd) {
+        background-color: #ffffff;
+    }
+
+    tbody tr:nth-child(even) {
+        background-color: #f9f9f9;
+    }
+
+    button {
+        background-color: #4CAF50;
+        color: white;
+        padding: 1px 6px;
+        margin: 6 6px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 12px;
+    }
+
+    button:hover {
+        background-color: #45a049;
     }
 </style>
 <main>
@@ -44,8 +77,6 @@
                 <td contenteditable="true" id="newSynonyms"></td>
                 <td contenteditable="true" id="newPartOfSpeech"></td>
                 <td contenteditable="true" id="newRating">0</td>
-
-
             </tr>
             {{range $index, $element := .}}
             <tr>
@@ -59,10 +90,8 @@
                 <td contenteditable="true" id="Synonyms{{$index}}">{{$element.Synonyms}}</td>
                 <td contenteditable="true" id="PartOfSpeech{{$index}}">{{$element.PartOfSpeech}}</td>
                 <td contenteditable="true" id="Rating{{$index}}">{{$element.Rating}}</td>
-
             </tr>
             {{end}}
-
         </tbody>
     </table>
 </main>
