--- a/Golang/MyProgram/words/template/wordNot.html
+++ b/Golang/MyProgram/words/template/wordNot.html
@@ -4,6 +4,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        font-size: 36px;
+        font-family: Arial, sans-serif;
     }
 
     .center-text {
@@ -13,22 +15,70 @@
     .error-notification {
         display: inline-block;
         padding: 10px;
-        background-color: #f8d7da;
+        background-color: #ffffff;
         color: #000000;
-        border: 1px solid #f5c6cb;
+        border: 1px solid #ff6060;
         border-radius: 4px;
         margin-bottom: 10px;
+        font-size: 36px;
+        font-family: Arial, sans-serif;
+    }
+
+    table {
+        margin-left: auto;
+        margin-right: auto;
+        border-collapse: separate;
+        border-spacing: 3px 0;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        color: #333;
+        width: 80%;
+    }
+
+    th,
+    td {
+        padding: 5px;
+        text-align: center;
+    }
+
+    tr:hover {
+        background-color: #f5f5f5;
+    }
+
+    .form-control {
+        display: inline-block;
+        margin-left: auto;
+        margin-right: auto;
+        border-collapse: separate;
+        border-spacing: 3px 0;
+        font-family: Arial, sans-serif;
+        font-size: 36px;
+        color: #000000;
+        
+    }
+
+    .btn {
+        display: inline-block;
+        margin-left: auto;
+        margin-right: auto;
+        border-collapse: separate;
+        border-spacing: 3px 0;
+        font-family: Arial, sans-serif;
+        font-size: 36px;
+        color: #ffffff;
+       
+       
     }
 </style>
 <main>
     <h2 class="center-text"></h2>
-    <h1 class="center-text error-notification">Wrong</h1>
-    <h3 class="center-text Russian-text">{{.Russian}}</h3>
-    <h3 class="Russian-text" id="English-text">{{.English}}</h3>
+
+    <h3 class="center-text error-notification">{{.Russian}}</h3><br>
+    <h3 class="Russian-text error-notification" id="English-text">{{.English}}</h3>
     <h3 class="center-text Russian-text">{{.Transcription}}</h3>
     <form action="/wordOtvet" method="POST" class="form-container">
         <input type="text" name="word" id="word" placeholder="Введите перевод" class="form-control" autofocus><br>
-        <button id="speak-button" class="btn btn-info">Воспроизвести</button>
+        <button id="speak-button" class="btn btn-info">Play</button>
         <button class="btn btn-warning">Send</button>
     </form>
 </main>
