--- a/Golang/MyProgram/words/template/wordAdd copy.html
+++ b/Golang/MyProgram/words/template/wordAdd copy.html
@@ -41,30 +41,35 @@
         <input type="text" name="WordOriginal" id="WordOriginal" placeholder="Original" class="form-control"
             autofocus><br>
         <div id="resultsContainer"></div>
-        <input type="text" name="WordTranslated" id="WordTranslated" placeholder="Translated" class="form-control"><br>
-        <input type="text" name="WordOriginalTranscription" id="WordOriginalTranscription" placeholder="Transcription"
+        <input type="text" name="WordTranslated" id="WordTranslated" placeholder="Translated"
             class="form-control"><br>
-        <input type="text" name="WordOriginalPartOfSpeech" id="WordOriginalPartOfSpeech" placeholder="Part Of Speech"
-            class="form-control"><br>
+        <input type="text" name="WordOriginalTranscription" id="WordOriginalTranscription"
+            placeholder="Transcription" class="form-control"><br>
+        <input type="text" name="WordOriginalPartOfSpeech" id="WordOriginalPartOfSpeech"
+            placeholder="Part Of Speech" class="form-control"><br>
         <input type="text" name="WordOriginalSynonyms" id="WordOriginalSynonyms" placeholder="Synonyms"
             class="form-control"><br>
 
         <input type="text" name="WordOriginalPastSimpleSingular" id="WordOriginalPastSimpleSingular"
             placeholder="Past Simple Singular" class="form-control"><br>
         <input type="text" name="WordOriginalPastSimpleSingularTranscription"
-            id="WordOriginalPastSimpleSingularTranscription" placeholder="Transcription" class="form-control"><br>
+            id="WordOriginalPastSimpleSingularTranscription" placeholder="Transcription"
+            class="form-control"><br>
         <input type="text" name="WordOriginalPastSimplePlural" id="WordOriginalPastSimplePlural"
             placeholder="Past Simple Plural" class="form-control"><br>
         <input type="text" name="WordOriginalPastSimplePluralTranscription"
-            id="WordOriginalPastSimplePluralTranscription" placeholder="Transcription" class="form-control"><br>
+            id="WordOriginalPastSimplePluralTranscription" placeholder="Transcription"
+            class="form-control"><br>
         <input type="text" name="WordOriginalPastParticipleSingular" id="WordOriginalPastParticipleSingular"
             placeholder="Past Participle Singular" class="form-control"><br>
         <input type="text" name="WordOriginalPastParticipleSingularTranscription"
-            id="WordOriginalPastParticipleSingularTranscription" placeholder="Transcription" class="form-control"><br>
+            id="WordOriginalPastParticipleSingularTranscription"
+            placeholder="Transcription" class="form-control"><br>
         <input type="text" name="WordOriginalPastParticiplePlural" id="WordOriginalPastParticiplePlural"
             placeholder="Past Participle Plural" class="form-control"><br>
         <input type="text" name="WordOriginalPastParticiplePluralTranscription"
-            id="WordOriginalPastParticiplePluralTranscription" placeholder="Transcription" class="form-control"><br>
+            id="WordOriginalPastParticiplePluralTranscription"
+            placeholder="Transcription" class="form-control"><br>
 
         <button class="btn btn-warning" autofocus>Save</button>
 
@@ -74,16 +79,15 @@
 
 <script>
     const searchInput = document.getElementById('WordOriginal');
-    const words = [];  // предполагается, что вы передаете данные слов с сервера как объект JavaScript
+    const words = {{.}}; // предполагается, что вы передаете данные слов с сервера как объект JavaScript
     let selectedIndex = -1;
 
-    searchInput.addEventListener('input', async event => {
+    searchInput.addEventListener('input', event => {
         const query = event.target.value;
-        const results = await searchWords(query);
+        const results = searchWords(query);
         updateResultsDropdown(results);
-        selectedIndex = -1;
+        selectedIndex = -1; // Сбросить выбранный индекс при изменении поискового запроса
     });
-
 
     searchInput.addEventListener('keydown', event => {
         const resultsContainer = document.getElementById('resultsContainer');
@@ -112,17 +116,10 @@
         });
     });
 
-    async function searchWords(query) {
-        if (query.length === 0) {
-            return [];
-        }
-
-        const response = await fetch('/api/search?q=' + encodeURIComponent(query));
-        const results = await response.json();
-
-        return results.sort((a, b) => a.WordOriginal.localeCompare(b.WordOriginal));
+    function searchWords(query) {
+        const filteredWords = words.filter(word => word.WordOriginal.toLowerCase().startsWith(query.toLowerCase()));
+        return filteredWords.sort((a, b) => a.WordOriginal.localeCompare(b.WordOriginal)); // сортировка по алфавиту
     }
-
 
 
 
